* Fixed a property reading bug on objects that implemented __get but not
  __isset, implementing __isset is however very much recommended
* Fixed a Dwoo_Data bug in the append method when the index didn't exist
  yet it threw a notice
* Fixed a bug when accessing global vars from a sub-template
* Fixed a couple bugs in the {dynamic} plugin with regard to using plugins
  within a dynamic block
* Fixed a {load_templates} bug, plugins used in external templates were not
  loaded correctly, same for custom user plugins
* Cached templates now check the source template for modification before 
  outputting the cached version
* Removed a couple of @-operator calls to file_get_contents

[2009-07-18] 1.1.0
! BC Break: Dwoo::initGlobals() is only called once during the Dwoo object
  construction. If you had overriden it and need to update global data
  before each template is executed you should instead override
  Dwoo::initRuntimeVars() and push stuff in the globals array there. Also
  be aware that this means captured data, foreach values and so-on will
  persist from a parent template to an included one (but the include's
  changes will not be reflected on the parent), and from a template
  to the next if you render several in series.
+ Added {template} plugin that allows you to define sub-templates and then
  call them (works recursively too, good for menus and lists)
+ Added {load_templates} to load external sub-templates into your file
+ Allowed string concatenation assignments with {$foo.="bar"}
+ Allowed access of static properties as {Foo::$bar}
+ Plugins/Helpers that use a dynamic number of arguments through
  func_get_args are now working since the compiler lets any arguments in
  excess pass through
+ Adapters: CodeIgniter: the adapter by Stefan Verstege has been added to
  core and he will be its maintainer from now on
+ Adapters: CakePHP: this adapter is now added to core and is designed to
  work with CakePHP 1.2